Initial tactical character round API.
