# openapi.yaml
@@ -1,4 +1,4 @@
-openapi: 3.1.0
+openapi: 3.0.3
 info:
   title: RMU Tactical API
   description: RMU Tactical API
@@ -14,6 +14,8 @@ tags:
     description: Tactical games
   - name: Tactical characters
     description: Tactical characters
+  - name: Tactical game rounds
+    description: Tactical game rounds
 paths:
   /tactical-games:
     get:
@@ -159,31 +161,6 @@ paths:
           description: OK
         '404':
           description: Tactical game not found
-  /tactical-games/{tacticalGameId}/start:
-    post:
-      tags:
-        - Tactical games
-      summary: Start tactical game
-      operationId: startTacticalGame
-      parameters:
-        - name: tacticalGameId
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TacticalGame'
-        '404':
-          description: Tactical game not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiError'
   /tactical-games/{tacticalGameId}/close:
     post:
       tags:
@@ -209,6 +186,58 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiError'
+
+  /tactical-games/{tacticalGameId}/rounds/{round}/characters:
+    get:
+      tags:
+        - Tactical game rounds
+      summary: Get tactical game round info
+      operationId: findTacticalGameCharacterRounds
+      parameters:
+        - name: tacticalGameId
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: round
+          in: path
+          required: true
+          schema:
+            type: number
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TacticalCharacterRound'
+
+  /tactical-games/{tacticalGameId}/rounds/start:
+    post:
+      tags:
+        - Tactical game rounds
+      summary: Start tactical game
+      operationId: startTacticalGame
+      parameters:
+        - name: tacticalGameId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TacticalGame'
+        '404':
+          description: Tactical game not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+                
   /characters:
     get:
       tags:
@@ -308,6 +337,10 @@ paths:
                 $ref: '#/components/schemas/TacticalCharacter'
         '404':
           description: Tactical character not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
     patch:
       tags:
         - Tactical characters
@@ -481,6 +514,19 @@ components:
           type: string
           description: Tactical character faction
           example: Evil
+    TacticalCharacterRound:
+      type: object
+      properties:
+        name:
+          type: string
+          description: Tactical character round id
+        tacticalGameId:
+          type: string
+        round:
+          type: number
+          format: int32
+        tacticalCharacterId:
+          type: string
     PagedContentTacticalGame:
       type: object
       properties:
